--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Technigo React App</title>
+    <title>Habits tracker</title>
   </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="main-container"></div>
   </body>
 
 </html>
